--- a/O_stranke2.html
+++ b/O_stranke2.html
@@ -63,15 +63,17 @@
 
     <div class="content">
            <!-- Start headera --> 
-    <nav class="navbar bg-body-tertiary header" style="padding: 0" >
-        <div class="container-fluid header">
-          <a class="navbar-brand fw-bold link-opacity-100" href="#">
-            <img src="./images/book.png" alt="kniha" style="width: 50px;"> <!-- logo header --> 
-              UČEBNICA SLOVENSKÉHO JAZYKA A LITERATÚRY
-          </a>
+      <div class="d-none d-md-block">
+        <nav class="navbar bg-body-tertiary header" style="padding: 0" >
+            <div class="container-fluid header">
+              <a class="navbar-brand fw-bold link-opacity-100" href="#">
+                <img src="../images/book.png" alt="kniha" style="width: 50px;"> <!-- logo header --> 
+                  UČEBNICA SLOVENSKÉHO JAZYKA A LITERATÚRY
+              </a>
+            </div>
+        </nav>
         </div>
-    </nav>
-     <!-- Koniec headera --> 
+         <!-- Koniec headera --> 
      <!-- Start kontentu --> 
                 <nav class="navbar navbar-expand-md navbar-light">
                     <div class="container-fluid">
